--- a/youtube.ipynb
+++ b/youtube.ipynb
@@ -134,7 +134,7 @@
         }
       ],
       "source": [
-        "api_key = 'AIzaSyAW6wiLfEW4sK1KBZ71Ddhfml9JjXbNie8'\n",
+        "api_key = ''\n",
         "url = 'https://www.googleapis.com/youtube/v3/videos?id='+video_id+'&key='+api_key+'&part=snippet,contentDetails,statistics,status'\n",
         "response_info=requests.get(url).json()\n",
         "comments=[]\n",
